<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".green_tea_activity"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/greentea"/>

    <TextView
        android:id="@+id/greenHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:textColor="@color/textColor1"
        android:text="@string/greenHeader"/>
    <TextView
        android:id="@+id/greenTeaHeader"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/green"
        android:textSize="24sp"
        android:textColor="@color/textColor1"
        android:text="@string/greenTeaHeader"/>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/greenTeaHeader"
        android:textSize="16sp"
        android:textColor="@color/textColor1"
        android:text="@string/greenTeastr"/>
</RelativeLayout>
    </ScrollView>