<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redt">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".red_tea_activity"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/redImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/redtea1"/>

        <TextView
            android:id="@+id/redHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textColor="@color/textColor1"
            android:text="@string/redHeader"/>
        <TextView
            android:id="@+id/redTeaHeader"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/redImage"
            android:textSize="24sp"
            android:textColor="@color/textColor1"
            android:text="@string/redTeaHeader"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/redTeaHeader"
            android:textSize="16sp"
            android:textColor="@color/textColor1"
            android:text="@string/redTeastr"/>
    </RelativeLayout>
</ScrollView>