<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/whitet">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".white_tea_activity"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/whiteImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/whitetea1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="112dp" />

    <TextView
        android:id="@+id/whiteHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:textColor="@color/textColor1"
        android:text="@string/whiteHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/whiteTeaHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="24sp"
        android:textColor="@color/textColor1"
        android:text="@string/whiteTeaHeader"
        android:layout_below="@+id/whiteImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/whiteTeaHeader"
        android:textSize="16sp"
        android:textColor="@color/textColor1"
        android:text="@string/whiteTeastr"/>
</RelativeLayout>
</ScrollView>